--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = "mongodb+srv://kaagyebi:Kwak.0208@cluster0.gqnqzu7.mongodb.net/notesDB?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI = "mongodb+srv://kaagyebi:Kwak.0208@cluster0.gqnqzu7.mongodb.net/wishesDB?retryWrites=true&w=majority&appName=Cluster0"
 
-PORT=5100
+PORT=5200
